--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,22 @@
 :root {
 	--blue: #206ce8;
-	--font: "Montserrat", sans-serif;
+	--open-sans: 'Open Sans', sans-serif;
+	--pacifico: 'Pacifico', cursive;
 }
 
 html,
 body {
+	height: 100%;
+	scroll-behavior: smooth;
+}
+
+body {
 	margin: 0;
 	padding: 0;
-	font-family: var(--font);
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+	font-family: var(--open-sans);
+}
+
+a {
+	text-decoration: none;
+	color: #000;
 }
