--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Pacifico&display=swap');
 :root {
 	--blue: #206ce8;
 	--open-sans: 'Open Sans', sans-serif;
